<resources>
    <string name="questions_left">Igjen: </string>
    <string name="app_name">Mappe1</string>
    <string name="opening_text">Velkommen til Matte</string>
    <string name="start_game">Start spill</string>
    <string name="preferences">Preferanser</string>
    <string name="statistics">Statistikk</string>
    <string name="start_game_title">Hva blir regnestykket?</string>
    <string name="statistics_title">Beste</string>
    <string name="preferences_title">Preferanser</string>
    <string name="return_btn_title">Tilbake</string>
    <string name="preferences_option_one">5</string>
    <string name="preferences_option_two">10</string>
    <string name="preferences_option_three">25</string>
    <string name="start_game_score">Poeng :   </string>
    <string name="statt_game_confirm">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="cancel">C</string>
    <string name="deleteHighscore">Slett highscore</string>
    <string name="complete_message">Du er ferdig med alle spørsmålene</string>
    <string name="back_to_highscore">Gå tilbake til resultater</string>
    <string name="resetScore">Vil du slette dne gamle resultatet</string>
    <string name="yes">Ja</string>
    <string name="winner">Spillet er ferdig</string>
    <string name="winner_Text">Fortsett til Beste Resultater</string>
    <string name="quit">Avslutt spill?</string>
    <string name="quit_message">Spillet blir ikke lagret</string>
    <string name="warning">Advarsel</string>
    <string name="no">Nei</string>








    <string-array name="questions">
        <item>1 + 5 =</item>
        <item>2 + 5 =</item>
        <item>3 + 5 =</item>
        <item>4 + 5 =</item>
        <item>5 + 5 =</item>
        <item>6 + 5 =</item>
        <item>7 + 5 =</item>
        <item>8 + 5 =</item>
        <item>9 + 5 =</item>
        <item>10 + 5 =</item>
        <item>11 + 5 =</item>
        <item>12 + 5 =</item>
        <item>13 + 5 =</item>
        <item>14 + 5 =</item>
        <item>15 + 5 =</item>
        <item>16 + 5 =</item>
        <item>17 + 5 =</item>
        <item>18 + 5 =</item>
        <item>19 + 5 =</item>
        <item>20 + 5 =</item>
        <item>21 + 5 =</item>
        <item>22 + 5 =</item>
        <item>23 + 5 =</item>
        <item>24 + 5 =</item>
        <item>25 + 5 =</item>
    </string-array>

    <string-array name="answers">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>



</resources>



