<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgkids">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/wrong"
            android:textAlignment="center"
            android:textColor="@color/blackColor"
            android:textSize="20sp">

        </ImageView>


        <TextView
            android:text="1"
            android:layout_marginTop="5dp"
            android:id="@+id/wrong_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="50dp"
            android:textColor="@color/blackColor"
            android:textSize="30sp">

        </TextView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/right"
            android:textAlignment="center"
            android:textColor="@color/blackColor"
            android:textSize="20sp">

        </ImageView>


        <TextView
            android:id="@+id/correct_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="0"
            android:textColor="@color/blackColor"
            android:textSize="30dp"
            >

        </TextView>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"


        >

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:textAlignment="center"
            android:textColor="@color/blackColor"
            android:text="20 + 20"
            android:textSize="40sp"
            >
        </TextView>
        <TextView
            android:id="@+id/answer"
            android:background="@drawable/border"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:textColor="@color/blackColor"
            android:layout_marginStart="140dp"
            android:gravity="center"

            android:textAlignment="center"
            android:textSize="40sp"
            >

        </TextView>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        >


        <Button

            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blueColor"
            android:layout_marginStart="24dp"
            android:textSize="30sp"
            android:text="@string/seven"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:background="@color/blueColor"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button8"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="27dp"
            android:layout_toStartOf="@+id/button6"
            android:text="@string/five"
            android:textSize="30sp"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button6"
            android:background="@color/blueColor"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button8"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="21dp"
            android:text="@string/six"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/button4"
            android:textSize="30sp"
            android:layout_marginStart="24dp"
            android:background="@color/blueColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button7"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="46dp"

            android:text="@string/four"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/button1"
            android:background="@color/blueColor"
            android:layout_marginStart="24dp"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button4"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:text="@string/one"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button5"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="135dp"
            android:background="@color/blueColor"
            android:onClick="onClick"
            android:text="@string/two"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonC"
            android:background="@color/redColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="135dp"
            android:text="@string/cancel"
            android:textSize="30sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_below="@+id/button2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="21dp"
            android:background="@color/greenColor"
            android:text="@string/statt_game_confirm"
            android:textSize="30sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/button0"
            android:background="@color/blueColor"
            android:layout_marginStart="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button2"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="34dp"
            android:text="@string/zero"
            android:textSize="30sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/button3"
            android:background="@color/blueColor"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button6"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="21dp"
            android:text="@string/three"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/button8"
            android:background="@color/blueColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="65dp"
            android:layout_toEndOf="@+id/button7"
            android:text="@string/eight"

            android:textSize="30dp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/button9"
            android:background="@color/blueColor"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:text="@string/nine"
            android:onClick="onClick"/>

    </RelativeLayout>


</LinearLayout>