<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgkids"
    >

    <TextView
        android:id="@+id/preference_title"
        android:layout_width="170dp"
        android:textColor="@color/blackColor"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/preferences_title"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textAlignment="center"
        >

    </TextView>


    <CheckBox
        android:layout_marginTop="30dp"
        android:id="@+id/checkBox1"
        android:textSize="30sp"
        android:fontFamily="casual"
        android:layout_gravity="center"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/preferences_option_one" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:fontFamily="casual"
        android:layout_gravity="center"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/preferences_option_two" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:fontFamily="casual"
        android:layout_gravity="center"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/preferences_option_three" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:background="@drawable/home"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            >
        </ImageView>

        <Button
            android:id="@+id/returnBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:background="@drawable/button_style3"
            android:text="@string/return_btn_title"
            android:textSize="20dp"
            >
        </Button>



    </RelativeLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
       >

        <ImageButton
            android:id="@+id/imageNor"
            android:layout_width="140dp"
            android:layout_height="152dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="21dp"
            app:srcCompat="@drawable/norge" />

        <ImageButton
            android:id="@+id/imageGer"
            android:layout_width="150dp"
            android:layout_height="152dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/tyskflagg" />
    </RelativeLayout>

</LinearLayout>