<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bgkids"
    >

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="casual"
        android:text="@string/opening_text"
        android:textAlignment="center"
        android:textColor="@color/blackColor"
        android:textSize="30sp">

    </TextView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/start_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_marginStart="90dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/button_style1"
            android:text="@string/start_game"
            android:textAlignment="center"
            android:textSize="20sp">

        </Button>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:background="@drawable/start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="90dp"
            >
        </ImageView>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:background="@drawable/trophy"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            >
        </ImageView>

        <Button
            android:id="@+id/statistics_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginStart="90dp"
            android:background="@drawable/button_style2"
            android:text="@string/statistics"
            android:textAlignment="center"
            android:textSize="20sp">

        </Button>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:background="@drawable/icon_settings"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            >
        </ImageView>

        <Button
            android:id="@+id/preference_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginStart="90dp"
            android:background="@drawable/button_style3"
            android:text="@string/preferences"
            android:textAlignment="center"
            android:textSize="20sp">

        </Button>

    </RelativeLayout>





</LinearLayout>