<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgkids">

    <TextView
        android:id="@+id/statistics_title"
        android:layout_width="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="casual"
        android:layout_height="wrap_content"
        android:textColor="@color/blackColor"
        android:text="@string/statistics_title"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textAlignment="center">

    </TextView>

    <TextView
        android:id="@+id/Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blackColor"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:background="@drawable/home"
            android:layout_marginStart="35dp"
            android:layout_marginTop="37dp"
            >
        </ImageView>

        <Button
            android:id="@+id/returnBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_style2"
            android:layout_marginStart="95dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:text="@string/return_btn_title" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/deleteHighscore"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_style4"
            android:layout_marginTop="25dp"
            android:layout_marginStart="95dp"
            android:textSize="20dp"
            android:text="@string/deleteHighscore"
            android:onClick="createDialog"/>


        <ImageView
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:background="@drawable/delete"
            android:layout_marginStart="35dp"
            android:layout_marginTop="37dp"
            >
        </ImageView>

    </RelativeLayout>





</LinearLayout>